--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:orientation="vertical"
     android:paddingBottom="@dimen/row_padding"
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/circleView"
-        android:paddingLeft="@dimen/text_row_padding_image" />
+        android:paddingLeft="@dimen/text_row_padding_image"
+        android:text="Titulo" />
 
     <TextView
         android:id="@+id/subtitleTextView"
@@ -30,5 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleTextView"
         android:layout_alignStart="@+id/titleTextView"
-        android:paddingLeft="@dimen/text_row_padding_image" />
+        android:paddingLeft="@dimen/text_row_padding_image"
+        android:text="Subtitulo" />
 </RelativeLayout>
